--- a/templates/customerlogin.html
+++ b/templates/customerlogin.html
@@ -3,23 +3,17 @@
 {% block title %}Customer Login{% endblock %}
 
 {% block content %}
-<style>
-    .errorlist {
-        color: red;
-    }
-</style>
 <div class="container">
     <div class="row" >
         <div class="col-md-6 mx-auto" >
-            <h3 style="text-align: center; font-size: xx-large; text-transform: uppercase; background: linear-gradient(to left, white, rgb(33, 34, 34), white);color: white; padding: 5px 0; margin: -10px; width: 100%;">Customer Login Form</h3>
-            <hr>
-            <form action="" method="POST" style="margin-left: 13rem;">
+            <h3 class="page-header">Customer Login</h3>
+            <form action="" method="POST" class="shadow p-4 bg-white rounded">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button class="btn btn-success" style="margin-left: 4rem;">Login as a Customer</button>
+                <button class="btn btn-primary-custom w-100">Login</button>
 
                 {% if error %}
-                <li style="color: red;">{{error}}</li>
+                <li style="color: var(--danger-color); list-style: none; margin-top: 10px;">{{error}}</li>
                 {% endif %}
             </form>
             <p style="text-align: center;">Forgot Password?<a href="{% url 'ecomapp:passworforgot' %}">Reset now. </a><span><br>or dont have account? <a href="{% url 'ecomapp:customerregistration' %}{% if request.GET.next %}?next={{request.GET.next}}{% endif %}">Register here </a> </span></p>
