--- a/templates/forgotpassword.html
+++ b/templates/forgotpassword.html
@@ -7,16 +7,17 @@
     <div class="row">
         <div class="col-md-8">
             {% if request.GET.m == "s" %}
-            <h3>Password reset link is sent to your email address. Please check your email immediately. </h3>
+            <h3 style="color: var(--accent-color);">Password reset link is sent to your email address. Please check your email immediately. </h3>
             {% else %}
-            <h3>Enter your email used in making customer account to get password reset link</h3>
+            <h3 class="page-header">Forgot Password</h3>
+            <p>Enter your email used in making customer account to get password reset link</p>
             {% if request.GET.m == "e" %}
-            <h4 class="text-danger">Something went wrong, please enter your email again.</h4>
+            <h4 style="color: var(--danger-color);">Something went wrong, please enter your email again.</h4>
             {% endif %}
-            <form action="" method="POST">
+            <form action="" method="POST" class="shadow p-4 bg-white rounded">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button> Get Reset Link</button>
+                <button class="btn btn-primary-custom"> Get Reset Link</button>
             </form>
             {% endif %}
         </div>
