--- a/templates/adminpages/admincategorycreate.html
+++ b/templates/adminpages/admincategorycreate.html
@@ -1,9 +1,9 @@
 {% extends 'adminpages/adminbase.html' %}
 
-{% block title %}Add New Product{% endblock %}
+{% block title %}Add New Category{% endblock %}
 {% block content %}
 <style>
-    /* Internal CSS for Product Create Form */
+    /* Internal CSS for Category Create Form */
     .form-wrapper {
         padding: 10px;
     }
@@ -19,10 +19,7 @@
         color: var(--primary-color);
     }
     
-    form input[type="text"],
-    form input[type="number"],
-    form textarea,
-    form select {
+    form input[type="text"] {
         width: 100%;
         padding: 10px 15px;
         border: 1px solid #ced4da;
@@ -31,26 +28,12 @@
         transition: border-color 0.3s, box-shadow 0.3s;
         background-color: #fcfcfc;
     }
-
-    form input[type="file"] {
-        display: block;
-        width: 100%;
-        padding: 10px 0;
-        font-size: 1rem;
-    }
     
-    form input:focus,
-    form textarea:focus,
-    form select:focus {
+    form input:focus {
         border-color: var(--secondary-color);
         outline: none;
         box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.2);
         background-color: #fff;
-    }
-    
-    form textarea {
-        resize: vertical;
-        min-height: 120px;
     }
     
     .btn-create {
@@ -79,20 +62,20 @@
     }
 </style>
 <div class="container-fluid">
-    <h1 class="mt-4">Add New Product</h1>
+    <h1 class="mt-4">Add New Category</h1>
     <div class="card shadow-sm">
         <div class="card-header">
-            <i class="fas fa-plus-circle me-1"></i>
-            Product Information
+            <i class="fas fa-tags me-1"></i>
+            Category Information
         </div>
         <div class="card-body">
             <div class="row justify-content-center">
-                <div class="col-lg-8 col-md-10">
+                <div class="col-lg-6 col-md-8">
                     <div class="form-wrapper">
-                        <form action method="POST" enctype="multipart/form-data">
+                        <form action="" method="POST">
                             {% csrf_token %}
                             {{form.as_p}}
-                            <button class="btn-create"><i class="fas fa-check me-2"></i>Create Product</button>
+                            <button class="btn-create"><i class="fas fa-check me-2"></i>Create Category</button>
                         </form>
                     </div>
                 </div>
