--- a/templates/allproducts.html
+++ b/templates/allproducts.html
@@ -3,24 +3,24 @@
 {% block title %} All Products {% endblock %}
 
 {% block content %}
-<div class="container" style="max-width: 100%; margin-left: 5px; ">
-    <h3 style="text-align: center; font-size: xx-large; text-transform: uppercase; background: linear-gradient(to left, white, rgb(0, 162, 255), white);color: white; padding: 5px 0; margin: -10px; ;">All Products</h3>
+<div class="container mt-4">
+    <h3 class="page-header">All Products</h3>
     {% for cat in allcategories %}
-    <hr>
-    <h4 class="p-3" style=" border-radius: 6px; text-transform: uppercase; color: white; background:linear-gradient(to right, black 10%, white);">
-        {{cat.title}}</h4>
-    <div class="row ml-1 " style="gap: 6px;">
+    <h4 class="section-header mt-4">{{cat.title}}</h4>
+    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 g-4">
         {% for p in cat.product_set.all %}
-        <div style=" max-width: 80%; padding: 1px; border: 1px solid rgb(173, 172, 172); border-radius: 4px;">
-            <div style="margin: 0; padding: 0;">
-                
-                
-            <h4>
-                <a href="{% url 'ecomapp:productdetail' p.slug %}" style="text-decoration: none; font-size: 14px;" > 
-                    <img src="{{p.image.url}}" alt="" class="img-fluid" style="height: 200px; width: 200px; "> <p> {{p.title}} </p> 
-                </a>
-            </h4>
-                <p style="color: black; font-size: 14px; font-weight: bolder;"><strike style="color: red; font-weight: 700;" >Rs.{{p.marked_price}}</strike> Rs.{{p.selling_price}}</p>
+        <div class="col">
+            <div class="card custom-card h-100">
+                <div class="card-body text-center">
+                    <a href="{% url 'ecomapp:productdetail' p.slug %}" class="text-decoration-none" style="color: var(--dark-text);">
+                        <img src="{{p.image.url}}" alt="{{p.title}}" class="img-fluid mb-3" style="height: 150px; object-fit: contain;">
+                        <h5 class="card-title text-truncate">{{p.title}}</h5>
+                    </a>
+                    <p class="card-text">
+                        <span class="text-strike me-2">Rs.{{p.marked_price}}</span>
+                        <span class="text-price">Rs.{{p.selling_price}}</span>
+                    </p>
+                </div>
             </div>
         </div>
         {% endfor %}
