--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -3,19 +3,10 @@
 {% block title %}Checkout {% endblock %}
 
 {% block content %}
-
-
-<style>
-    .errorlist{
-        color: red;
-        list-style: none;
-        font-size: 5px;
-    }
-</style>
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h3 style="text-align: center; font-size: xx-large; text-transform: uppercase; background: linear-gradient(to left, white, rgb(33, 34, 34), white);color: white; padding: 5px 0; width: 100%;">Items in the cart</h3>
+            <h3 class="page-header">Items in Cart</h3>
             
             <table class="table mt-5">
                 <thead style="text-align: center;">
@@ -45,14 +36,14 @@
                 </tbody>
             </table>
             <hr>
-            <a href="{% url 'ecomapp:mycart' %}" class="btn btn-success" style="margin-left: 37rem;">Update Cart</a>
+            <a href="{% url 'ecomapp:mycart' %}" class="btn btn-secondary float-end">Update Cart</a>
         </div>
-        <div class="col-md-4" style="text-align: left; margin-left: 8rem;">
-            <h3 style="text-align: center; font-size: xx-large; text-transform: uppercase; background: linear-gradient(to left, white, rgb(33, 34, 34), white);color: white; padding: 5px 0; width: 100%;">Checkout Form</h3>
-            <form action="" method="POST">
+        <div class="col-md-5 offset-md-1">
+            <h3 class="page-header">Checkout</h3>
+            <form action="" method="POST" class="shadow p-4 bg-white rounded">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button class="btn btn-dark" style="font-weight: bolder; margin-left: 20rem;">Place order</button>
+                <button class="btn btn-primary-custom w-100">Place Order</button>
             </form>
         </div>
     </div>
