--- a/templates/customerorderdetail.html
+++ b/templates/customerorderdetail.html
@@ -7,12 +7,12 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8 mx-auto">
-            <h3>Order Detail</h3><hr>
-            <p><span class="font-weight-bold">Order ID: </span> #ORDER_{{ord_obj.id}}</p>
-            <p><span class="font-weight-bold">Order Status: </span> {{ord_obj.order_status}}</p>
-            <p><span class="font-weight-bold">Order On: </span> {{ord_obj.created_at}}({{ord_obj.created_at|timesince}} ago)</p>
-            <p><span class="font-weight-bold">Customer Information: </span> By {{ord_obj.ordered_by}}, {{ord_obj.mobile}}</p>
-            <p><span class="font-weight-bold">Shipping Address: </span> By {{ord_obj.shipping_address}} ({{ord_obj.email}})</p>
+            <h3 class="page-header">Order Detail</h3>
+            <p><span class="fw-bold">Order ID: </span> #ORDER_{{ord_obj.id}}</p>
+            <p><span class="fw-bold">Order Status: </span> {{ord_obj.order_status}}</p>
+            <p><span class="fw-bold">Order On: </span> {{ord_obj.created_at}}({{ord_obj.created_at|timesince}} ago)</p>
+            <p><span class="fw-bold">Customer Information: </span> By {{ord_obj.ordered_by}}, {{ord_obj.mobile}}</p>
+            <p><span class="fw-bold">Shipping Address: </span> By {{ord_obj.shipping_address}} ({{ord_obj.email}})</p>
             <h4>Ordered Items</h4>
             <table class="table">
                 <thead>
@@ -28,14 +28,14 @@
                     {% for cp in ord_obj.cart.cartproduct_set.all %}
                     <tr>
                         <td>{{forloop.counter}}</td>
-                        <td><a target="_blank" href="{% url 'ecomapp:productdetail' cp.product.slug %}">{{cp.product.title}}({{cp.product.id}})</a></td>
+                        <td><a target="_blank" href="{% url 'ecomapp:productdetail' cp.product.slug %}" class="text-decoration-none" style="color: var(--primary-color);">{{cp.product.title}}</a></td>
                         <td>{{cp.rate}}</td>
                         <td>{{cp.quantity}}</td>
                         <td>{{cp.subtotal}}</td>
                     </tr>
                     {% endfor %}
                     <tr>
-                        <th colspan="4" class="text-right">Total: </th>
+                        <th colspan="4" class="text-end">Total: </th>
                         <th>Rs {{ord_obj.total|intcomma}}/-</th>
                     </tr>
                 </tbody>
