--- a/templates/customerprofile.html
+++ b/templates/customerprofile.html
@@ -5,35 +5,31 @@
 {% block content %}
 <div class="container" style="margin: 0;">
     <div class="row">
-        <div class="col-4 ml-5 p-3" style=" margin-left: 20px; border-radius: 2px 20px; background-color: greenyellow;">
-            <h3
-                style="text-align: center; font-size: large; text-transform: uppercase; padding: 5px 0; margin: -10px; font-weight: bolder; width: 100%;">
-                Detail Information</h3>
-            <hr>
-            <p><span class="font-weight-bold" style="text-transform: uppercase; font-size: medium;"> Name: </span> <br>
-                <span style=" font-size: medium; padding: 2px 0 2px 2px;"> {{customer.full_name}}</span>
+        <div class="col-md-4 p-3 mb-3">
+            <div class="card custom-card p-3">
+            <h4 class="section-header text-center mb-4">Detail Information</h4>
+            <p><span class="fw-bold text-uppercase"> Name: </span> <br>
+                <span class="text-muted"> {{customer.full_name}}</span>
             </p>
-            <p><span class="font-weight-bold" style="text-transform: uppercase; font-size: medium;"> Username: </span>
+            <p><span class="fw-bold text-uppercase"> Username: </span>
                 <br>
-                <span style=" font-size: medium; padding: 2px 0 2px 2px;"> {{customer.user.username}}</span>
+                <span class="text-muted"> {{customer.user.username}}</span>
             </p>
-            <p><span class="font-weight-bold" style="text-transform: uppercase; font-size: medium;"> Email: </span> <br>
-                <span style=" font-size: medium; padding: 2px 0 2px 2px;"> {{customer.user.email}}</span>
+            <p><span class="fw-bold text-uppercase"> Email: </span> <br>
+                <span class="text-muted"> {{customer.user.email}}</span>
             </p>
-            <p><span class="font-weight-bold" style="text-transform: uppercase; font-size: medium;"> Address: </span>
+            <p><span class="fw-bold text-uppercase"> Address: </span>
                 <br>
-                <span style=" font-size: medium; padding: 2px 0 2px 2px;"> {{customer.address}}</span>
+                <span class="text-muted"> {{customer.address}}</span>
             </p>
-            <p><span class="font-weight-bold" style="text-transform: uppercase; font-size: medium;"> Joined on: </span>
+            <p><span class="fw-bold text-uppercase"> Joined on: </span>
                 <br>
-                <span style=" font-size: medium; padding: 2px 0 2px 2px;"> {{customer.joined_on}}</span>
+                <span class="text-muted"> {{customer.joined_on}}</span>
             </p>
+            </div>
         </div>
-        <div class="col-7 p-4" style="margin-left: 20px; border-radius: 20px 2px; background-color: skyblue; ">
-            <h3
-                style="text-align: center; font-size: xx-large; text-transform: uppercase; color: white; padding: 5px 0; margin: -10px; width: 100%;">
-                Previous Orders</h3>
-            <hr>
+        <div class="col-md-8 p-4">
+            <h3 class="page-header">Previous Orders</h3>
             <table class="table">
                 <thead>
                     <tr>
@@ -48,7 +44,7 @@
                     {% for ord in orders %}
                     <tr>
                         <td>{{forloop.counter}}</td>
-                        <td><a href="{% url 'ecomapp:customerorderdetail' ord.pk %}">#ORDER_{{ord.id}}</a></td>
+                        <td><a href="{% url 'ecomapp:customerorderdetail' ord.pk %}" class="text-decoration-none" style="color: var(--primary-color);">#ORDER_{{ord.id}}</a></td>
                         <td>Rs. {{ord.total}}</td>
                         <td>{{ord.created_at|timesince}} ago</td>
                         <td>{{ord.order_status}}</td>
