--- a/templates/mycart.html
+++ b/templates/mycart.html
@@ -6,10 +6,8 @@
 <div class="container" style="margin-top: 3rem;">
     <div class="row" style="justify-content: center; text-transform: uppercase;">
         <div class="col-md-12">
-            <h4
-                style="text-transform:uppercase; font-size: 50px; background-color: cadetblue; border-radius: 6px; color: white; text-align: center; ">
-                cart</h4>
-            <hr>
+            <h3 class="page-header">My Cart</h3>
+            
             <table class="table">
                 <thead style="text-align: center; font-size:medium;">
                     <tr>
@@ -30,15 +28,9 @@
                         <td>{{cp.quantity}}</td>
                         <td>{{cp.subtotal}}</td>
                         <td>
-                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=inc" class="btn"
-                                style="background-color: rgb(70, 70, 70); color: cyan; font-size: larger; padding: 0 3px;">
-                                + </a>
-                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=dcr" class="btn"
-                                style="background-color: rgb(70, 70, 70); color: cyan; font-size: larger; padding: 0 3px;">
-                                - </a>
-                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=rmv" class="btn"
-                                style="background-color: rgb(255, 0, 0); color: black; font-size: larger; padding: 0 3px;">
-                                x </a>
+                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=inc" class="btn btn-sm btn-secondary"> + </a>
+                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=dcr" class="btn btn-sm btn-secondary"> - </a>
+                            <a href="{% url 'ecomapp:managecart' cp.id %}?action=rmv" class="btn btn-sm btn-danger-custom"> x </a>
                         </td>
                     </tr>
                     {% endfor %}
@@ -46,13 +38,13 @@
                         <th colspan="4" style="font-size: large; text-align: center;">Total</th>
                         <th style="font-size: large;">Rs. {{cart.total}}</th>
                         {% if cart.cartproduct_set.all %}
-                        <th><a class="btn btn-success" href="{% url 'ecomapp:checkout' %} "> Check out
+                        <th><a class="btn btn-primary-custom" href="{% url 'ecomapp:checkout' %} "> Check out
                             </a></th>
                         {% endif %}
                     </tr>
                     {% if cart.cartproduct_set.all %}
                     <tr>
-                        <th><a href="{% url 'ecomapp:emptycart' %}" class="btn btn-danger">Empty Cart</a></th>
+                        <th><a href="{% url 'ecomapp:emptycart' %}" class="btn btn-danger-custom">Empty Cart</a></th>
                     </tr>
                     {% endif %}
                 </tbody>
