--- a/templates/passwordreset.html
+++ b/templates/passwordreset.html
@@ -6,10 +6,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            <form action="" method="POST">
+            <h3 class="page-header">Reset Password</h3>
+            <form action="" method="POST" class="shadow p-4 bg-white rounded">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button>Reset password</button>
+                <button class="btn btn-primary-custom">Reset password</button>
             </form>
         </div>
     </div>
