--- a/templates/search.html
+++ b/templates/search.html
@@ -5,36 +5,29 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-10 "
-            style=" display: flexbox; justify-content: center;">
-            <h3>Search Results for <span
-                    class="text-info">"{{request.GET.keyword}}"</span></h3>
-            <hr>
+        <div class="col-md-12">
+            <h3 class="page-header">Search Results for <span style="color: var(--warning-color);">"{{request.GET.keyword}}"</span></h3>
 
             {% for result in results %}
-            <div class="row mb-5"
-                style=" margin-left: 10rem; box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 15px; border-radius: 4px;">
-                <div class="col-md-3">
-                    <img src="{{result.image.url}}" width="300px"
-                        class="img-fluid p-3" alt="image"
-                        style="max-width: 500px;">
-                </div>
-                <div class="col-md-4" style="margin: 2rem 5rem 5rem 12rem;">
-                    <h4
-                        style="margin-top: 2rem;  text-transform: uppercase; font-size: 20px; width: 600px;">
-                        {{result.title}}</h4>
-                    <div style="margin-top: 4rem;">
-                        {% if result.stock_quantity <= 0 %} <a class="p-2"
-                            style=" color:red; border:1px solid red; border-radius: 4px; font:14px bolder;">Out
-                            of
-                            Stock</a>
-                        {% else %}
-                        <a class="p-2" href="{% url 'addtocart' product.id %}"
-                            style="background-color: green; border-radius: 4px; text-decoration: none; color: aliceblue; font: 14px bolder;">Add
-                            To Cart</a>
-                        {% endif %}
+            <div class="card custom-card mb-4">
+                <div class="row g-0">
+                    <div class="col-md-3 d-flex align-items-center justify-content-center p-3">
+                        <img src="{{result.image.url}}" class="img-fluid rounded-start" alt="{{result.title}}" style="max-height: 200px;">
                     </div>
-
+                    <div class="col-md-9">
+                        <div class="card-body">
+                            <h4 class="card-title">{{result.title}}</h4>
+                            <p class="card-text">{{result.description|truncatechars:150}}</p>
+                            <div class="mt-3">
+                                {% if result.stock_quantity <= 0 %} 
+                                    <button class="btn btn-danger-custom" disabled>Out of Stock</button>
+                                {% else %}
+                                    <a href="{% url 'ecomapp:addtocart' result.id %}" class="btn btn-primary-custom">Add To Cart</a>
+                                    <a href="{% url 'ecomapp:productdetail' result.slug %}" class="btn btn-outline-secondary ms-2">View Details</a>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             {% endfor %}
